<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddEditStudentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="75dp">

            <EditText
                android:id="@+id/et_first_name"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:textSize="22sp"
                android:importantForAutofill="no"
                android:hint="@string/first_name_text"/>

            <EditText
                android:id="@+id/et_last_name"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                android:textSize="22sp"
                android:importantForAutofill="no"
                android:hint="@string/last_name_text"/>

            <EditText
                android:id="@+id/et_id"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                android:textSize="22sp"
                android:importantForAutofill="no"
                android:hint="@string/album_number_text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pick_subjects"
                app:layout_constraintTop_toBottomOf="@id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="250dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="15dp"
                tools:listitem="@layout/pick_subject_rv_item"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStudentAdd"
                app:layout_constraintTop_toBottomOf="@id/rv_pick_subjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"
                android:textSize="20sp"
                android:text="@string/add_student_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/back_button_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>