<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GradesFragment"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_student_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_average"
        android:layout_marginEnd="15dp"
        android:textSize="22sp"
        android:text="@string/name_text"/>

    <TextView
        android:id="@+id/tv_subject_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_name"
        app:layout_constraintStart_toStartOf="@+id/tv_student_name"
        android:textSize="18sp"
        android:text="@string/subject_name_text"/>

    <TextView
        android:id="@+id/tv_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_student_name"
        app:layout_constraintTop_toTopOf="@id/tv_student_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_subject_name"
        android:minWidth="60dp"
        android:textSize="28sp"
        android:text=""/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_grades"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/grade_rv_item"
        android:paddingBottom="55dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_name"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_grade"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        app:icon="@drawable/ic_add"
        android:text="@string/add_grade_text"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/back_button_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>