<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subject_name_text"
        android:textSize="24sp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_delete"/>

    <TextView
        android:id="@+id/tv_day_of_week"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/week_day_placeholder"
        android:textSize="18sp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

    <TextView
        android:id="@+id/tv_time_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_time"
        android:textSize="18sp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_dash"
        app:layout_constraintTop_toTopOf="@+id/tv_day_of_week"
        app:layout_constraintBottom_toBottomOf="@+id/tv_day_of_week"
        app:layout_constraintStart_toEndOf="@+id/tv_day_of_week"/>

    <TextView
        android:id="@+id/tv_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/tv_time_from"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_to"
        app:layout_constraintTop_toTopOf="@+id/tv_time_from"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time_from"/>

    <TextView
        android:id="@+id/tv_time_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_time"
        android:textSize="18sp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toTopOf="@+id/tv_time_from"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time_from"
        app:layout_constraintStart_toEndOf="@+id/tv_dash"/>

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/delete_iv_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>