<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddSubjectFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_subject_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:textSize="22sp"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/subject_name_text"/>

            <Spinner
                android:id="@+id/sp_day_of_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/week_days"
                app:layout_constraintTop_toBottomOf="@+id/et_subject_name"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="50dp"/>

            <LinearLayout
                android:id="@+id/ll_time_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/sp_day_of_week"
                app:layout_constraintRight_toLeftOf="@+id/ll_time_to"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/tv_time_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/text_from"/>

                <TextView
                    android:id="@+id/tv_time_from_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/placeholder_time"/>

                <Button
                    android:id="@+id/btn_set_time_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/change_time_text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_time_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="@+id/ll_time_from"
                app:layout_constraintBottom_toBottomOf="@+id/ll_time_from"
                app:layout_constraintLeft_toRightOf="@+id/ll_time_from"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/tv_time_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/text_to"/>

                <TextView
                    android:id="@+id/tv_time_to_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/placeholder_time"/>

                <Button
                    android:id="@+id/btn_set_time_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/change_time_text"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_students_of_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="250dp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                tools:listitem="@layout/students_of_subject_rv_item"
                app:layout_constraintTop_toBottomOf="@+id/ll_time_from"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubjectAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_students_of_subject"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:textSize="22sp"
                android:text="@string/add_subject_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/back_button_desc"/>


</androidx.constraintlayout.widget.ConstraintLayout>