<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_right"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_number_placeholder"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="18sp"
            android:layout_marginTop="-5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_left"
        android:layout_marginHorizontal="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_grades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/grades_text"
            android:layout_marginHorizontal="15dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>